<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Inomera Research.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/user_info_id"
            android:inputType="text"/>

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/user_info_name"
            android:inputType="textCapWords"/>

        <EditText
            android:id="@+id/edit_text_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/user_info_surname"
            android:inputType="textCapWords"/>

        <EditText
            android:id="@+id/edit_text_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/user_info_date_of_birth"
            android:inputType="datetime"
            android:maxLength="10"/>

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/user_info_email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/edit_text_msisdn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/user_info_msisdn"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/edit_text_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:digits="012"
            android:hint="@string/user_info_gender"
            android:inputType="numberDecimal"
            android:maxLength="1"/>

        <EditText
            android:id="@+id/edit_text_segments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/user_info_segments"/>

        <Button
            android:id="@+id/layout_user_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Send Update User Request"/>


    </LinearLayout>

</ScrollView>