<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Inomera Research.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/button_enable_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_location"/>

        <Button
            android:id="@+id/button_mock_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mock_location"/>

        <Button
            android:id="@+id/button_push_inbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/push_inbox_test"/>

        <Button
            android:id="@+id/button_general_api_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_user_test"/>

        <Button
            android:id="@+id/button_event_commerce_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_commerce_test"/>

        <Button
            android:id="@+id/button_event_media_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_media_test"/>

        <Button
            android:id="@+id/button_event_general_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_general_test"/>

        <Button
            android:id="@+id/button_push_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_view_share_device_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/ic_action_share"
            android:drawablePadding="8dp"
            android:text="DEVICE TOKEN"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_view_gcm_device_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            tools:text="token token token token token token token token token token token token"/>

    </LinearLayout>

</ScrollView>