<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Inomera Research.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/button_content_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_content_comment"/>

        <Button
            android:id="@+id/button_content_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_content_rate"/>

        <Button
            android:id="@+id/button_content_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_content_view"/>

    </LinearLayout>

</ScrollView>