<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Inomera Research.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_box_fetch_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/inbox_status_read"/>

            <CheckBox
                android:id="@+id/check_box_fetch_unread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inbox_status_unread"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:gravity="left"
                android:text="Page Size:"/>

            <Spinner
                android:id="@+id/spinner_page_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_inbox_fetch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/general_inbox_fetch"/>

            <Button
                android:id="@+id/button_inbox_next_page"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/general_inbox_next_page"/>

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radio_group_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_fetch_read"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/inbox_status_read"/>

            <RadioButton
                android:id="@+id/radio_fetch_unread"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/inbox_status_unread"/>

            <RadioButton
                android:id="@+id/radio_fetch_deleted"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/inbox_status_deleted"/>

        </RadioGroup>

        <Button
            android:id="@+id/button_inbox_set_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/general_inbox_set_status"/>

        <TextView
            android:id="@+id/text_view_inbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:text="Current : || Unread : || Total : "/>

        <ListView
            android:id="@+id/list_view_inbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>